# nusystematics

./: CMakeLists.txt  CMakePresets.json  build_artless_fnal.sh  setup_artless_fnal.sh
nusyst/: CMakeLists.txt
nusyst/artless/: CMakeLists.txt  GENIESetup.cmake  GenerateSystProviderConfigNuSyst.cc  ReWeightGHep.cc  configure_nusyst_providers.hh  response_helper.hh  setup.sh.in
nusyst/fcl/: ExampleGENIEAllParameterProvider.fcl  ExampleGENIEFFCCQEProducer.fcl  ExampleGENIEFFCCQEProviders.fcl  ExampleGeneratedMetaData_GENIEAll.fcl  ExampleGeneratedMetaData_GENIEFFCCQE.fcl  MINERvARPATuneInputManifest.fcl  MINERvAq0q3TuneGeneratedMetaData.fcl  MKGeneratedMetaData.fcl
nusyst/interface/: IGENIESystProvider_tool.hh  types.hh
nusyst/responsecalculators/: BeRPA.hh  MINERvA2p2hq0q3.hh  MINERvARPAq0q3_ReWeight.hh  MINERvAq0q3Weighting_data.hh  MKSinglePiEnuq0q3_ReWeight.hh  TemplateResponseCalculatorBase.hh
nusyst/systproviders/: BeRPAWeight_tool.cc  CMakeLists.txt  GENIEReWeightEngineConfig.cc  GENIEReWeightEngineConfig.hh  GENIEReWeightParamConfig.cc  GENIEReWeightParamConfig.hh  GENIEReWeight_config.hh  GENIEReWeight_tool.cc  GENIEReWeight_tool.hh  GENIEResponseParameterAssociation.hh  MINERvAq0q3Weighting_tool.cc  MINERvAq0q3Weighting_tool.hh  MKSinglePiEnuq0q3_tool.cc  MKSinglePiEnuq0q3_tool.hh
nusyst/utility/: GENIEUtils.hh  enumclass2int.hh  exceptions.hh
nusystematics/: CMakeLists.txt
nusystematics/app/: DumpConfiguredTweaksNuSyst.cc
nusystematics/artless/: CMakeLists.txt  DumpPrecalculatedPolyResponse.cc  FindISystProviderNuSyst.cc  GENIESetup.cmake  GenerateSystProviderConfigNuSyst.cc  ReWeightGHep.cc  TestPolyResponse5.cc  make_instance.hh  response_helper.hh  setup.sh.in
nusystematics/fcl/: AllDUNETDRv0.fcl  AllDUNETDRv1.fcl  BeRPA.Config.DUNE_TDRv0.fcl  CMakeLists.txt  DUNETDRv0.ParamHeaders.fcl  DUNETDRv1.CVOnly.ParamHeaders.fcl  DUNETDRv1.CVOnly.ParamHeaders.nocvmfs.fcl  DUNETDRv1.ParamHeaders.fcl  DUNETDRv1.ParamHeaders.nocvmfs.fcl  DUNETDRv1.ParamHeaders.noprolog.fcl  EbLepMomShift.Config.DUNE_TDRv0.fcl  EbLepMomShift.Config.DUNE_TDRv1.fcl  FSILikeEAvailSmearing.Config.DUNE_TDRv0.fcl  FSILikeEAvailSmearing.Config.DUNE_TDRv1.fcl  GENIEReWeight.Config.DUNE_TDRv0.fcl  GENIEReWeight.Config.DUNE_TDRv1.fcl  MINERvA_E2p2h.Config.DUNE_TDRv0.fcl  MINERvA_E2p2h.Config.DUNE_TDRv1.fcl  MINERvAq0q3Tune.Config.DUNE_TDRv0.fcl  MINERvAq0q3Tune.Config.DUNE_TDRv1.fcl  MKInputManifest.fcl  MKSPPEnuq0q3.Config.DUNE_TDRv0.fcl  MKSinglePi_Template.Config.DUNE_TDRv0.fcl  MKSinglePi_Template.Config.DUNE_TDRv1.fcl  MiscInteractionSysts.Config.DUNE_TDRv0.fcl  NOvAStyleNonResPion.Config.DUNE_TDRv0.fcl
nusystematics/fcl/ICARUS/: All.Config.ICARUS_v1.fcl
nusystematics/inputgenerationtools/: BindingEnergyFlatTreeMaker.cc
nusystematics/interface/: IGENIESystProvider_tool.hh
nusystematics/responsecalculators/: BeRPA.hh  C12ToAr40_2p2hScaling.hh  EnuBinnedTemplateResponseCalculator.hh  FSILikeEAvailSmearing.hh  MINERvA2p2hEnergyDependenceScale.hh  MINERvA2p2hq0q3.hh  MINERvARPAq0q3_ReWeight.hh  MINERvAq0q3Weighting_data.hh  MKSinglePiEnuq0q3_ReWeight.hh  MKSinglePiTemplate_ReWeight.hh  SPPLowQ2Suppression.hh  TemplateResponseCalculatorBase.hh  nuenuebar_xsec_ratio.hh  nuenumu_xsec_ratio.hh
nusystematics/scripts/validation/: TweaksNuSyst_Validate.cc
nusystematics/systproviders/: BeRPAWeight_tool.cc  BeRPAWeight_tool.hh  CMakeLists.txt  EbLepMomShift_tool.cc  EbLepMomShift_tool.hh  FSILikeEAvailSmearing_tool.cc  FSILikeEAvailSmearing_tool.hh  GENIEReWeightEngineConfig.cc  GENIEReWeightEngineConfig.hh  GENIEReWeightParamConfig.cc  GENIEReWeightParamConfig.hh  GENIEReWeight_tool.cc  GENIEReWeight_tool.hh  GENIEResponseParameterAssociation.hh  MINERvAE2p2h_tool.cc  MINERvAE2p2h_tool.hh  MINERvAq0q3Weighting_tool.cc  MINERvAq0q3Weighting_tool.hh  MKSinglePiEnuq0q3_tool.cc  MKSinglePiEnuq0q3_tool.hh  MKSinglePiTemplate_tool.cc  MKSinglePiTemplate_tool.hh  MiscInteractionSysts_tool.cc  MiscInteractionSysts_tool.hh  NOvAStyleNonResPionNorm_tool.cc  NOvAStyleNonResPionNorm_tool.hh
nusystematics/utility/: GENIEUtils.hh  enumclass2int.hh  exceptions.hh  simbUtility.hh
ups/: product_deps
